# ShaderEditor

./: CMakeLists.txt  Callbacks.cpp  Callbacks.h  GUI.cpp  GUI.h  LICENSE  README.md  Renderer.cpp  Renderer.h  RenderingBase.cpp  RenderingBase.h  RenderingOpenGL.cpp  RenderingOpenGL.h  Shader.cpp  Shader.h  TextCompletion.cpp  TextCompletion.h  Vector.h  Window.cpp  Window.h  main.cpp  vcpkg.json
